--- a/package.json
+++ b/package.json
@@ -10,16 +10,24 @@
     "@types/node": "^12.12.50",
     "@types/react": "^16.9.42",
     "@types/react-dom": "^16.9.8",
+    "@types/styled-components": "^5.1.1",
+    "@types/yup": "^0.29.3",
+    "formik": "^2.1.4",
+    "framer-motion": "^1.11.1",
+    "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "typescript": "^3.7.5"
+    "styled-components": "^5.1.1",
+    "typescript": "^3.7.5",
+    "yup": "^0.29.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format": "prettier --write \"src/**/*.(js|jsx|ts|tsx)\""
   },
   "eslintConfig": {
     "extends": "react-app"
